--- a/index.html
+++ b/index.html
@@ -1,4 +1,54 @@
 <!DOCTYPE html>
 <html>
-<h1>Hello</h1>
+
+<head>
+
+<style>
+
+@media only screen and (max-width: 768px)
+{
+    .body{
+    	width: 100%;
+    }
+
+}
+
+div {
+	height: 200px;
+    width: 200px;    
+}
+
+h1 {
+background-color:DimGray; 
+color: White;
+text-align: center;
+}
+h2 {
+background-color:DimGray; 
+color: White;
+text-align: center;}
+p {color: black;}
+</style>
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title> MDDN352 Technical Exercise 1</title>
+
+</head>
+
+<body>
+<h1>Week 1 Workshop exercise</h1>
+<h3>6th of MAR - Responsive page</h3>
+
+<p>This is a page for the technical exercise of MDDN352.</p>
+
+<h2>Prescription</h2>
+<p>An introduction to topics in creating designs that feature compact, mobile and networked technology. In addition to learning a range of skills used in designing such systems, students will also be considering the cultural significance of ubiquitous computing from a variety of sociocultural perspectives.</p>
+
+
+
+<div>
+<img src="https://pbs.twimg.com/profile_images/851553797386125312/fHmcRWtO_400x400.jpg" style="max-width:100%;height:auto;">
+</div>
+
+</body>
 </html>
